# ImGui_StyleEditor

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  README_DEV.md  generate_code.py
.github/workflows/: build_and_run_tests.yml
include/ImStyleEd/: ImStyleEd.hpp  cereal_style.hpp  ser20_style.hpp
src/: BrightnessGroup.cpp  BrightnessGroup.hpp  Categories.hpp  Category.hpp  CategoryConfig.cpp  CategoryConfig.h  CategoryConfig.hpp  Color.hpp  ColorCategories.hpp  ColorCategory.cpp  ColorCategory.h  ColorCategory.hpp  ColorConfig.cpp  ColorConfig.hpp  ColorEditor.hpp  ColorElement.cpp  ColorElement.h  ColorElement.hpp  ColorGroup.hpp  ColorGroupID.hpp  ColorTheme.hpp  ColorThemesManager.cpp  ColorThemesManager.hpp  Config.cpp  Config.hpp  Editor.cpp  Editor.hpp  Element.hpp  ErrorHandlers.hpp  Group.hpp  GroupID.hpp  ISerializer.hpp  ImStyleEd.cpp  JsonSerializer.hpp  Theme.cpp  Theme.hpp  color_conversions.cpp  color_conversions.hpp  color_id_to_string.cpp  color_id_to_string.hpp  (+4 more)
tests/: CMakeLists.txt  tests.cpp
